[package]
name = "mycelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-fs = "1.6.0"
deno_ast = { version = "0.25.0", features = ["transpiling"] }
deno_core = "0.175.0"
futures-lite = "1.12.0"
nannou = "0.18.1"
serde = "1.0.158"
