[package]
name = "mycelia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-fs = "1.6.0"
deno_ast = { version = "0.25.0", features = ["transpiling"] }
deno_core = "0.175.0"
fj = "0.41.0"
fj-interop = "0.41.0"
fj-operations = "0.41.0"
futures-lite = "1.12.0"
kiss3d = "0.35.0"
serde = "1.0.158"
